Refactor project  : split app.py and clean module, check FILES.md & README.md, .gitattributes upload lfs for ResNet_model, using DATA
